fix: use correct fields for intervals profile api
We were using some hallucinated stuff here.
